Add configured_device_type to port/Scan response (#911)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.165.0) stable; urgency=medium
+
+  * Add configured_device_type parameter to port/Scan RPC response. 
+    It contains the device type from template if the device is configured in wb-mqtt-serial.conf.
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 21 May 2025 15:12:30 +0500
+
 wb-mqtt-serial (2.164.3) stable; urgency=medium
 
   * Fix A-OK, Dooya, Somfy and WinDeco meta/error flicker
