--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.165.1) stable; urgency=medium
+
+  * Somfy SDN: add application mode property (roller/venetian) for Sonesse 40 AC
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Wed, 21 May 2025 15:10:00 +0400
+
 wb-mqtt-serial (2.165.0) stable; urgency=medium
 
   * Add configured_device_type parameter to port/Scan RPC response. 
