--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.165.2) stable; urgency=medium
+
+  * Remove duplicate channel from MAP3H fw2 basic template
+  * Remove duplicate channel from Network module PING2 for Komfovent C3/C4 template
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 22 May 2025 10:42:34 +0500
+
 wb-mqtt-serial (2.165.1) stable; urgency=medium
 
   * Somfy SDN: add application mode property (roller/venetian) for Sonesse 40 AC
