Add device/Probe RPC
Add device/Probe RPC for requesting information about Wiren Board device

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.166.0) stable; urgency=medium
+
+  * Add device/Probe RPC for requesting information about Wiren Board device
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 22 May 2025 11:22:57 +0500
+
 wb-mqtt-serial (2.165.2) stable; urgency=medium
 
   * Remove duplicate channel from MAP3H fw2 basic template
@@ -13,7 +19,7 @@ wb-mqtt-serial (2.165.1) stable; urgency=medium
 
 wb-mqtt-serial (2.165.0) stable; urgency=medium
 
-  * Add configured_device_type parameter to port/Scan RPC response. 
+  * Add configured_device_type parameter to port/Scan RPC response.
     It contains the device type from template if the device is configured in wb-mqtt-serial.conf.
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 21 May 2025 15:12:30 +0500
