--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.166.0) stable; urgency=medium
+
+  * Add read parameters featute for non-Modbus devices to Device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 22 May 2025 13:02:16 +0300
+
 wb-mqtt-serial (2.165.2) stable; urgency=medium
 
   * Remove duplicate channel from MAP3H fw2 basic template
