--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.167.2) stable; urgency=medium
+
+  * config-map3ev.json: Add separate signature WB-MAP3EV
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Wed, 28 May 2025 15:24:00 +0300
+
 wb-mqtt-serial (2.167.1) stable; urgency=medium
 
   * WB-MAP templates: Add default values for Turns and Phi
