Add device/Probe RPC (#919)
Add device/Probe RPC for requesting information about Wiren Board device

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.169.0) stable; urgency=medium
+
+  * Add device/Probe RPC for requesting information about Wiren Board device
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 02 Jun 2025 10:34:18 +0500
+
 wb-mqtt-serial (2.168.0) stable; urgency=medium
 
   * Add parameters group read feature to device/LoadConfig RPC
@@ -56,7 +62,7 @@ wb-mqtt-serial (2.165.1) stable; urgency=medium
 
 wb-mqtt-serial (2.165.0) stable; urgency=medium
 
-  * Add configured_device_type parameter to port/Scan RPC response. 
+  * Add configured_device_type parameter to port/Scan RPC response.
     It contains the device type from template if the device is configured in wb-mqtt-serial.conf.
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 21 May 2025 15:12:30 +0500
