--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-wb-mqtt-serial (2.169.1) stable; urgency=medium
+wb-mqtt-serial (2.160.3-wb100) stable; urgency=medium
 
   * Add separate device signature for WB-MRM2-mini/NC
 
- -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Wed, 04 Jun 2025 15:19:39 +0300
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Thu, 05 Jun 2025 12:29:32 +0300
 
 wb-mqtt-serial (2.160.3) stable; urgency=medium
 
