--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.160.3-wb100) stable; urgency=medium
+
+  * Add separate device signature for WB-MRM2-mini/NC
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Thu, 05 Jun 2025 12:29:32 +0300
+
 wb-mqtt-serial (2.160.3) stable; urgency=medium
 
   * Add TResponseTimeoutException handling for device/LoadConfig RPC
