--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.170.0) stable; urgency=medium
+
+  * Add byte order device template option for Modbus registers
+  * Add word order feature for "string" and "string8" Modbus register format
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 06 Jun 2025 11:53:32 +0300
+
 wb-mqtt-serial (2.169.1) stable; urgency=medium
 
   * Add separate device signature for WB-MRM2-mini/NC
