fix baudrate selection

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.171.1) stable; urgency=medium
+
+  * Fix baudrate limits
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Mon, 09 Jun 2025 18:18:01 +0300
+
 wb-mqtt-serial (2.171.0) stable; urgency=medium
 
   * Add a template for MTD062-MB and MTD262-MB modbus microwave presence sensors
