--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.171.2) stable; urgency=medium
+
+  * Correct the TDeviceTemplatesTest.Validate.dat file
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Mon, 09 Jun 2025 18:43:56 +0300
+
 wb-mqtt-serial (2.171.1) stable; urgency=medium
 
   * Fix baudrate limits
