--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.171.2) stable; urgency=medium
+
+  * Fix confed common schema translations
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 11 Jun 2025 08:44:06 +0300
+
 wb-mqtt-serial (2.171.1) stable; urgency=medium
 
   * Add byte order property definition to confed common schema 
