--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.172.0) stable; urgency=medium
+
+  * Add meta/error feature for devices with only event registers enabled
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 17 Jun 2025 05:46:28 +0000
+
 wb-mqtt-serial (2.171.2) stable; urgency=medium
 
   * Fix confed common schema translations
