--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.175.0) stable; urgency=medium
+
+  * Add partial register write featute for Modbus device setup items and parameters
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 25 Jun 2025 07:49:58 +0000
+
 wb-mqtt-serial (2.174.1) stable; urgency=medium
 
   * WB-MSW templates: Add safety mode for IR devices
