--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.176.0) stable; urgency=medium
+
+  * Refactor device/LoadConfig RPC
+  * Add read by device ID feature to device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 02 Jul 2025 14:02:21 +0300
+ 
 wb-mqtt-serial (2.175.4) stable; urgency=medium
 
   * config-carel-mu-rack.json: fix name channels
