--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.176.0) stable; urgency=medium
+
+  * Add WB-UPS v.3 template
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Wed, 02 Jul 2025 11:09:14 +0300
+
 wb-mqtt-serial (2.175.4) stable; urgency=medium
 
   * config-carel-mu-rack.json: fix name channels
