--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.176.1) stable; urgency=medium
+
+  * templates: ups v.3: fix charge counter register address
+
+ -- Evgeny Boger <boger@wirenboard.com>  Fri, 04 Jul 2025 01:30:26 +0300
+
 wb-mqtt-serial (2.176.0) stable; urgency=medium
 
   * Add WB-UPS v.3 template
