--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.160.3-wb102) stable; urgency=medium
+
+  * Add WB-UPS v.3 template
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 04 Jul 2025 11:12:24 +0500
+
 wb-mqtt-serial (2.160.3-wb101) stable; urgency=medium
 
   * WB-MWAC v.2: deprecate old template, add new, make Leakage Mode control read only, add button to reset it
