--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.178.0) stable; urgency=medium
+
+  * Add device/Load RPC for modbus device channels and parameters reading
+  * Add device/Set RPC for modbus device channels and parameters writing
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 08 Jul 2025 16:18:58 +0300
+
 wb-mqtt-serial (2.177.3) stable; urgency=medium
 
   * Port handling refactoring. No functional changes
