--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.177.4) stable; urgency=medium
+
+  * Bump version. No functional changes
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 08 Jul 2025 18:19:21 +0500
+
 wb-mqtt-serial (2.177.3) stable; urgency=medium
 
   * Port handling refactoring. No functional changes
