--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.177.4) stable; urgency=medium
+
+  * Fix channel settings negative hex value parsing
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Thu, 10 Jul 2025 13:34:04 +0300
+
 wb-mqtt-serial (2.177.3) stable; urgency=medium
 
   * Port handling refactoring. No functional changes
