WB-MWAC v.2 template: Add support for normally closed sensors

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.179.1) stable; urgency=medium
+
+  * config-wb-mwac2_ver2.json.jinja: Add support for normally closed sensors
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Wed, 28 May 2025 15:24:00 +0300
+
 wb-mqtt-serial (2.179.0) stable; urgency=medium
 
   * Add device/Load RPC for modbus device channels and parameters reading
