--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.0) stable; urgency=medium
+
+  * Add Modbus TCP protocol support to Port/Load RPC
+
+ -- Evgeny Boger <boger@wirenboard.com>  Thu, 24 Jul 2025 20:33:51 +0300
+
 wb-mqtt-serial (2.179.0) stable; urgency=medium
 
   * Add device/Load RPC for modbus device channels and parameters reading
