--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 wb-mqtt-serial (2.180.0) stable; urgency=medium
 
-  * Add modbus function 0x17 (23) support
+  * Add modbus function 0x17 (23) support for Port/Load RPC
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Thu, 24 Jul 2025 12:26:26 +0300
 
