--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.1) stable; urgency=medium
+
+  * Revert master branch, no functional changes
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 25 Jul 2025 11:39:27 +0000
+
 wb-mqtt-serial (2.180.0) stable; urgency=medium
 
   * Add modbus function 0x17 (23) support for Port/Load RPC
