--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 wb-mqtt-serial (2.179.1) stable; urgency=medium
 
-  * config-wb-mwac2_ver2.json.jinja: Add support for normally closed sensors
+  * config-wb-mwac2_ver2.json.jinja:
+    - Add support for normally closed sensors
+    - Add buzzer conrol
 
- -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Wed, 28 May 2025 15:24:00 +0300
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Tue, 22 Jul 2025 15:24:00 +0300
 
 wb-mqtt-serial (2.179.0) stable; urgency=medium
 
