--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 wb-mqtt-serial (2.183.1) stable; urgency=medium
 
   * Add protocol to Modbus TCP port information in ports/Load RPC
+  * Add protocol parameter to device/Probe RPC
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 06 Aug 2025 09:46:47 +0500
 
