--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.184.1) stable; urgency=medium
+
+  * Fix wrong illuminance coefficient for MTDX62-MB presence sensor template
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Wed, 13 Aug 2025 17:57:37 +0300
+
 wb-mqtt-serial (2.184.0) stable; urgency=medium
 
   * Add device/SetPoll RPC for device poll suspending and resuming
