--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.184.1) stable; urgency=medium
+
+  * Fix device/SetPoll RPC reply format
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Thu, 14 Aug 2025 14:03:17 +0300
+
 wb-mqtt-serial (2.184.0) stable; urgency=medium
 
   * Add device/SetPoll RPC for device poll suspending and resuming
