--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+wb-mqtt-serial (2.184.3) stable; urgency=medium
+
+  * Fix changelog, no functional changes
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Thu, 14 Aug 2025 14:54:50 +0300
+
 wb-mqtt-serial (2.184.2) stable; urgency=medium
 
   * Fix wrong illuminance coefficient for MTDX62-MB presence sensor template
 
- -- Alexander Getman <alexander.getman@wirenboard.com>  Wed, 13 Aug 2025 17:57:37 +0300
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Wed, 14 Aug 2025 14:50:37 +0300
  
 wb-mqtt-serial (2.184.1) stable; urgency=medium
 
