--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+wb-mqtt-serial (2.185.0) stable; urgency=medium
+
+  * Add protocol to Modbus TCP port information in ports/Load RPC
+  * Add protocol parameter to device/Probe RPC
+  * Set TCP_NODELAY for TCP ports
+  * Handle TCP port closing by remote
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 06 Aug 2025 09:46:47 +0500
+
 wb-mqtt-serial (2.184.4) stable; urgency=medium
 
   * Add Modbus TCP protocol support for device/Load, device/Set and device/LoadConfig RPC
