--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+wb-mqtt-serial (2.186.1) stable; urgency=medium
+
+  * config-wb-mwac2_ver2.json.jinja:
+    - Add support for normally closed sensors
+    - Add buzzer conrol
+
+  * config-wb-mwac.json.jinja:
+    - Add support for normally closed sensors
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Thu, 28 Aug 2025 10:54:00 +0300
+
 wb-mqtt-serial (2.186.0) stable; urgency=medium
 
   * Add mode to port/Scan RPC for starting and continuing device scan
