--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+wb-mqtt-serial (2.180.2-wb101) stable; urgency=medium
+
+  * config-wb-mwac2_ver2.json.jinja:
+    - Add support for normally closed sensors
+    - Add buzzer control
+
+  * config-wb-mwac.json.jinja:
+    - Add support for normally closed sensors
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Mon, 06 Oct 2025 17:05:00 +0300
+
 wb-mqtt-serial (2.180.2-wb100) stable; urgency=medium
 
   * Fix WB-MAP SN reading
