--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.188.0) stable; urgency=medium
+
+  * WB-UPS v.3 template: add parallel mode support
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Tue, 02 Sep 2025 15:03:12 +0300
+
 wb-mqtt-serial (2.187.0) stable; urgency=medium
 
   * Add increase poll interval for disconnected devices feature
