--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.188.4) stable; urgency=medium
+
+  * Fix WB-MAP* regexp (same as in wb-device-manager)
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Tue, 23 Sep 2025 10:59:31 +0300
+
 wb-mqtt-serial (2.188.3) stable; urgency=medium
 
   * Fix formatting in WBE2-I-EBUS template. No functional changes
