--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 wb-mqtt-serial (2.188.4) stable; urgency=medium
 
-  * Fix WB-MAP* regexp (same as in wb-device-manager)
+  * Fix WB-MAP* SN reading on port/Scan
 
  -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Tue, 23 Sep 2025 10:59:31 +0300
 
