--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.189.1) stable; urgency=medium
+
+  * Add VAKIO City Air 250/500 Template
+
+ -- Alexander Degtyarev <a.degtyarev@wirenboard.com>  Wed, 01 Oct 2025 14:50:00 +0400
+
 wb-mqtt-serial (2.189.0) stable; urgency=medium
 
   * Update device templates for:
