--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.190.0) stable; urgency=medium
+
+  * Generate default config on service start
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Wed, 01 Oct 2025 15:00:00 +0400
+
 wb-mqtt-serial (2.189.0) stable; urgency=medium
 
   * Update device templates for:
