--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.2-wb101) stable; urgency=medium
+
+  * fix WB-LED fade dec RGB regs
+
+ -- Nikita Kulikov <n.kulikov@wirenboard.com>  Wed, 08 Oct 2025 12:46:12 +0300
+
 wb-mqtt-serial (2.180.2-wb100) stable; urgency=medium
 
   * Fix WB-MAP SN reading
