Add config-wb-mai2-cc.json.jinja, rename config-wb-mai2-cc.json to co… (#1008)
* Add config-wb-mai2-cc.json.jinja, rename config-wb-mai2-cc.json to config-wb-mai2-cc-deprecated.json

* Fix: TDeviceTemplatesTest.Validate.dat

* Fix: TDeviceTemplatesTest.Validate.dat

* Fix: device_type

* Remove WB-MAI2 from test/TDeviceTemplatesTest.Validate.dat

* Fix: remove ,

* Update: TDeviceTemplatesTest.Validate.dat

* Update debian/changelog, update config-wb-mai2-cc.json.jinja

* Update config-wb-mai2-cc.json.jinja

* Revert test/TDeviceTemplatesTest.Validate.dat

* fix: building

* Fix: units V

* Update: channels without names

* Add invisible fields

* Add required fields

* Fix: input_physical_value_scale

* Added IN Value dependence on the mode

* Add fw

* Deprecated tag was removed

* Fix: signature name

* Fix: TDeviceTemplatesTest.Validate.dat

* Fix after review

* Fix after review

* Fix after review

* Fix: TDeviceTemplatesTest.Validate.dat

* Fix: TDeviceTemplatesTest.Validate.dat

* Fix: , ms to (ms)

* Fix: rename

* Fix: rename

* Fix: after review

* Fix: templates/config-wb-mai2-cc-fw-4.32.json.jinja

* Fix: test/TDeviceTemplatesTest.Validate.dat

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.193.0) stable; urgency=medium
+
+  * New WB-MAI2 config with conversion of current into a physical quantity, old marked as deprecated
+
+ -- Vadim Deriabkin <vadim.deriabkin@wirenboard.com>  Tue, 14 Oct 2025 15:56:38 +0700
+
 wb-mqtt-serial (2.192.2) stable; urgency=medium
 
   * fix WB-LED fade dec RGB regs
