Update config/Load RPC and config/GetSchema RPC reply format (#937) (#1007)
* Update config/Load RPC and config/GetSchema RPC reply format (#937)
* Add condition dependencies to device template when sending it to homeui
* Fix default values in schema
* Remove subdevices support for wb-mqtt-homeui
* Remove consists_of validation with schema
* Remove unused defaultProperties in schemas

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+wb-mqtt-serial (2.194.0) stable; urgency=medium
+
+  * Drop subdevices support in wb-mqtt-homeui
+
+  [ Ilya Titov ]
+  * Update config/Load RPC reply format
+  * Update config/GetSchema RPC reply format
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 27 Oct 2025 10:29:23 +0500
+
 wb-mqtt-serial (2.193.0) stable; urgency=medium
 
   * New WB-MAI2 config with conversion of current into a physical quantity, old marked as deprecated
