--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.195.0) stable; urgency=medium
+
+  * Allow using domain names in RPC requests to TCP ports
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 30 Oct 2025 16:14:10 +0500
+
 wb-mqtt-serial (2.194.0) stable; urgency=medium
 
   * Drop subdevices support in wb-mqtt-homeui
