--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.196.0) stable; urgency=medium
+
+  * Add template's firmware version check for device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Thu, 31 Oct 2025 08:52:14 +0300
+
 wb-mqtt-serial (2.195.0) stable; urgency=medium
 
   * Allow using domain names in RPC requests to TCP ports
@@ -267,7 +273,7 @@ wb-mqtt-serial (2.175.3) stable; urgency=medium
 
 wb-mqtt-serial (2.175.2) stable; urgency=medium
 
-  * Fix forced frame timeout bug for modbus register range reading 
+  * Fix forced frame timeout bug for modbus register range reading
   * Fix slow first poll for devices with continuous read enabled
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Mon, 30 Jun 2025 12:19:52 +0300
@@ -322,7 +328,7 @@ wb-mqtt-serial (2.171.2) stable; urgency=medium
 
 wb-mqtt-serial (2.171.1) stable; urgency=medium
 
-  * Add byte order property definition to confed common schema 
+  * Add byte order property definition to confed common schema
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 10 Jun 2025 18:40:32 +0300
 
