--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.197.0) stable; urgency=medium
+
+  * Add template for WB-MIO, WB-MIO-E, WB-MIO-E v2, WB-MGE
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Wed, 05 Nov 2025 11:25:00 +0300
+
 wb-mqtt-serial (2.196.0) stable; urgency=medium
 
   * Add template's firmware version check for device/LoadConfig RPC
