--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.197.2) stable; urgency=medium
+
+  * Fix port response_timeout_ms handling
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 11 Nov 2025 09:37:07 +0500
+
 wb-mqtt-serial (2.197.1) stable; urgency=medium
 
   * Delete html tags <b> in descriptions
