--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.198.0) stable; urgency=medium
+
+  * Fix device/Load and device/LoadConfig RPC reply values scale, offset and round
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 11 Nov 2025 14:36:14 +0300
+
 wb-mqtt-serial (2.197.2) stable; urgency=medium
 
   * Fix port response_timeout_ms handling
