--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 wb-mqtt-serial (2.198.0) stable; urgency=medium
 
   * Remove unsupported registers data from device/LoadConfig RPC reply
+  * Add Modbus TCP support for device/LoadConfig RPC
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 11 Nov 2025 12:02:14 +0300
 
