[FW-789] Update changelog v2.199.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.199.0) stable; urgency=medium
+
+  * Add more NTC options for WB-MAI6 template
+
+ -- Sergey Nikitenko <siarhei.nikitsenka@wirenboard.com>  Fri, 14 Nov 2025 13:30:00 +0300
+
 wb-mqtt-serial (2.198.0) stable; urgency=medium
 
   * Fix device/Load and device/LoadConfig RPC reply values scale, offset and round
