--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.198.1) stable; urgency=medium
+
+  * Fix empty RPC responses
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 17 Nov 2025 17:44:31 +0500
+
 wb-mqtt-serial (2.198.0) stable; urgency=medium
 
   * Fix device/Load and device/LoadConfig RPC reply values scale, offset and round
