--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-wb-mqtt-serial (2.198.0) stable; urgency=medium
+wb-mqtt-serial (2.199.0) stable; urgency=medium
 
   * Add new template for wbe2-i-opentherm-fw-1.93
 
  -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 18 Nov 2025 12:10:00 +0300
+
+wb-mqtt-serial (2.198.0) stable; urgency=medium
+
+  * Fix device/Load and device/LoadConfig RPC reply values scale, offset and round
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 11 Nov 2025 14:36:14 +0300
 
 wb-mqtt-serial (2.197.2) stable; urgency=medium
 
