--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.200.0) stable; urgency=medium
+ 
+  * Add new template for wbe2-i-opentherm-fw-1.93
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 18 Nov 2025 12:10:00 +0300
+
 wb-mqtt-serial (2.199.0) stable; urgency=medium
 
   * Add more NTC options for WB-MAI6 template
