--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.201.0) stable; urgency=medium
+
+  * Remove unsupported registers data from device/LoadConfig RPC reply
+  * Add Modbus TCP support for device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 24 Nov 2025 08:30:43 +0300
+
 wb-mqtt-serial (2.200.1) stable; urgency=medium
 
   * Fix empty RPC responses
@@ -5,7 +12,7 @@ wb-mqtt-serial (2.200.1) stable; urgency=medium
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 20 Nov 2025 19:08:41 +0500
 
 wb-mqtt-serial (2.200.0) stable; urgency=medium
- 
+
   * Add new template for wbe2-i-opentherm-fw-1.93
 
  -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 18 Nov 2025 12:10:00 +0300
