--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,21 @@
+wb-mqtt-serial (2.202.0) stable; urgency=medium
+
+  * Set default "max_write_registers" parameter for Wiren Board devices to Modbus frame maximum value (123)
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 25 Nov 2025 10:48:23 +0300
+
 wb-mqtt-serial (2.201.1) stable; urgency=medium
 
   * Fix RPC port settings bug
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 24 Nov 2025 11:07:17 +0300
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Mon, 24 Nov 2025 11:07:17 +0300
 
 wb-mqtt-serial (2.201.0) stable; urgency=medium
 
   * Remove unsupported registers data from device/LoadConfig RPC reply
   * Add Modbus TCP support for device/LoadConfig RPC
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 24 Nov 2025 08:30:43 +0300
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Mon, 24 Nov 2025 08:30:43 +0300
 
 wb-mqtt-serial (2.200.1) stable; urgency=medium
 
