--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.203.1) stable; urgency=medium
+
+  * Fix device/LoadConfig RPC error when reading from devices with 0.0.0-rcX firmware version
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 26 Nov 2025 16:54:42 +0500
+
 wb-mqtt-serial (2.203.0) stable; urgency=medium
 
   * Set compatible firmwares for parameters and channels in WB-MIR v.2, WB-MIR v.3 and WB-MR6C templates
