--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.204.0) stable; urgency=medium
+
+  [ Radmir Khakimov ]
+  * Add WB-MDALI support
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 28 Nov 2025 09:43:16 +0500
+
 wb-mqtt-serial (2.203.1) stable; urgency=medium
 
   * Fix device/LoadConfig RPC error when reading from devices with 0.0.0-rcX firmware version
