--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+wb-mqtt-serial (2.203.2) stable; urgency=medium
+
+  * Set compatible firmwares for parameters and channels in MAP12E, WB-LED, WB-MDM3, WB-MWAC, WB-MAO4, WB-MR3, WB-MR6C v.3, WB-MRM2-MINI, WB-MRWM2 and WB-MWAC2 templates
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Mon, 01 Dec 2025 17:07:03 +0300
+
+wb-mqtt-serial (2.203.1) stable; urgency=medium
+
+  * Fix device/LoadConfig RPC error when reading from devices with 0.0.0-rcX firmware version
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 26 Nov 2025 16:54:42 +0500
+
 wb-mqtt-serial (2.203.0) stable; urgency=medium
 
   * Set compatible firmwares for parameters and channels in WB-MIR v.2, WB-MIR v.3 and WB-MR6C templates
