--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 wb-mqtt-serial (2.203.1) stable; urgency=medium
 
+  * Add Drivent V2 Template
+
+ -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Tue, 02 Dec 2025 14:00:00 +0400
+
+wb-mqtt-serial (2.203.1) stable; urgency=medium
+
   * Fix device/LoadConfig RPC error when reading from devices with 0.0.0-rcX firmware version
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 26 Nov 2025 16:54:42 +0500
