--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.203.2) stable; urgency=medium
+
+  * Fix template discovery for old WB-MRGBW-D devices
+  * Fix reading settings from old WB-MRGBW-D devices
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 03 Dec 2025 13:05:46 +0500
+
 wb-mqtt-serial (2.203.1) stable; urgency=medium
 
   * Fix device/LoadConfig RPC error when reading from devices with 0.0.0-rcX firmware version
