--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
-wb-mqtt-serial (2.204.0) stable; urgency=medium
+wb-mqtt-serial (2.205.0) stable; urgency=medium
 
   * Add Drivent V2 Template
 
- -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Tue, 02 Dec 2025 14:00:00 +0400
+ -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Tue, 10 Dec 2025 13:00:00 +0300
+
+wb-mqtt-serial (2.204.0) stable; urgency=medium
+
+  * Set config-xy-md0x template deprecate
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 09 Dec 2025 09:45:00 +0300
+
+wb-mqtt-serial (2.203.2) stable; urgency=medium
+
+  * Fix template discovery for old WB-MRGBW-D devices
+  * Fix reading settings from old WB-MRGBW-D devices
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 03 Dec 2025 13:05:46 +0500
 
 wb-mqtt-serial (2.203.1) stable; urgency=medium
 
