--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.209.0) stable; urgency=medium
+
+  * Disabled default polling in Drivent V2 Template for chanells: "Reset The End Positions", "Remember The Open Position", "Remember The Close Position"
+
+ -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Tue, 17 Dec 2025 18:00:00 +0300
+
 wb-mqtt-serial (2.208.0) stable; urgency=medium
 
   * Set compatible firmwares for parameters and channels in MAP12E, WB-LED, WB-MDM3, WB-MWAC, WB-MAO4, WB-MR3, WB-MR6C v.3, WB-MRM2-MINI, WB-MRWM2 and WB-MWAC2 templates
