--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.212.0) stable; urgency=medium
+
+  * MAP3E and MAP3ET templates: Add hw signatures and all parameters
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Mon, 22 Dec 2025 21:05:00 +0300
+
 wb-mqtt-serial (2.211.0) stable; urgency=medium
 
   * MS and MSW templates: Add sht40 cleaning mode
