--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 wb-mqtt-serial (2.212.1) stable; urgency=medium
 
-  * 
+  * Update README.md
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Sun, 28 Dec 2025 17:53:26 +0500
 
