--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.212.1) stable; urgency=medium
+
+  * Update README.md
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Sun, 28 Dec 2025 17:53:26 +0500
+
 wb-mqtt-serial (2.212.0) stable; urgency=medium
 
   * MAP3E and MAP3ET templates: Add new device signatures
